# cica-review-case-documents-airflow

./: .dockerignore  .env_template  .gitignore  .pre-commit-config.yaml  .trivyignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  RUNBOOK.md  SWITCHING_GUIDE.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run-ingestion-local.sh  run_locally_with_dot_env.sh  run_multi_case_chunking_comparison.sh  run_multi_case_evaluation.sh  run_wordstream_param_sweep.sh  setup-local-dev-wsl.sh
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: codeQL-review.yml  dependency-review.yml  regenerate-requirements.yml  scan-container.yml  test-container.yml  test.yml
docs/: LINE_SENTENCE_CHUNKER.md  LINE_SENTENCE_CHUNKING_STRATEGY.md
document-search-airflow/: README.md  opensearch_domain.json  pyproject.toml  tasks.py
document-search-airflow/notebooks/: index_pdf_with_text.ipynb
document-search-airflow/src/document_search_airflow/: create_opensearch_index.py  extractor_pdf_with_text.py  index_document.py
evaluation_suite/: EVALUATION_SUITE.md  __init__.py  run_multi_case_chunking_comparison.py  run_multi_case_evaluation.py  run_wordstream_param_sweep.py
evaluation_suite/search_evaluation/: README.md  __init__.py  bootstrap.py  chunks_loader.py  date_formats.py  evaluation_config.py  evaluation_models.py  evaluation_reporting.py  evaluation_settings.py  generate_expected_chunks.py  opensearch_client.py  optimization_engine.py  optimization_objective.py  optimization_results.py  optimize_search.py  pipeline_config.py  relevance_scoring.py  run_chunking_comparison.py  run_evaluation.py  run_single_evaluation.py  search_client.py  search_looper.py  search_query_builder.py  term_matching.py
evaluation_suite/testing_docs/: predetermined_queries_template.csv  search_terms.csv
evaluation_suite/tests/: __init__.py  test_bootstrap.py  test_case_discovery.py  test_chunk_metrics.py  test_chunks_loader.py  test_date_formats.py  test_evaluation_config.py  test_evaluation_reporting.py  test_evaluation_settings.py  test_generate_expected_chunks.py  test_ground_truth.py  test_multi_case_aggregator.py  test_multi_case_bootstrap.py  test_multi_case_runner.py  test_opensearch_client.py  test_optimization_engine.py  test_optimization_objective.py  test_optimization_results.py  (+14 more)
examples/: line_sentence_chunker_example.py
local-dev-enviroment/: README.md  docker-compose.yml
local-dev-environment/: .env_template  BEDROCK_CONNECTOR_README.md  Makefile  OPENSEARCH_INDEXES_README.md  README.md  __init__.py  create_opensearch_index.py  docker-compose-dashboard-only.yml  docker-compose.yml  opensearch_dashboards.dev.yml  pyproject.toml  pytest.ini  requirements.txt  search_client.py  setup-bedrock-connector-neural.sh  setup-bedrock-connector-portforward.sh  setup-opensearch-indexes-portforward.sh
local-dev-environment/diagrams/: bedrock-connector-flow.mermaid
local-dev-environment/init-scripts/: 01-create-aws-resources.sh  02-create-opensearch-resources.sh  03-setup-bedrock-connector-neural.sh  create-aws-resources.sh  create-opensearch-resources.sh  opensearch_domain.json  setup-bedrock-connector.sh  setup-bedrock-dense-connector.sh
local-dev-environment/init-scripts/lib/: bedrock_connector_common.inc  opensearch_templates.inc
local-dev-environment/integration_helper/: embedding_generator.py  examples.py  put_doc.py  search_for_doc.py
local-dev-environment/testing/: README.md  __init__.py  chunk_metrics.py  chunks_loader.py  config.py  date_formats.py  evaluation_config.py  evaluation_settings.py  generate_expected_chunks.py  optimize_search.py  relevance_scoring.py  run_evaluation.py  search_client.py  search_looper.py  term_matching.py
local-dev-environment/testing/handwriting_accuracy/: run_handwriting_evaluation.py
local-dev-environment/testing/handwriting_accuracy/iam_testing/: README.md  __init__.py  fuzzy_matching.py  ground_truth_parser.py  iam_filters.py  keyword_scoring.py  schemas.py  scoring.py  stemmed_matching.py  textract_client.py  textract_ocr.py
local-dev-environment/testing/handwriting_accuracy/iam_testing/llm/: __init__.py  base.py  clients.py  response.py
local-dev-environment/testing/handwriting_accuracy/iam_testing/runners/: __init__.py  augment.py  batch.py  case_documents.py  custom.py  keyword.py  single.py  utils.py
local-dev-environment/testing/handwriting_accuracy/vision_model_testing/: README.md  __init__.py  config.py  scoring.py
local-dev-environment/testing/handwriting_accuracy/vision_model_testing/llm/: __init__.py  base.py  clients.py  production_prompt.py  prompt.py  response.py
local-dev-environment/testing/handwriting_accuracy/vision_model_testing/runners/: __init__.py  utils.py  vision.py  vision_augment.py  vision_keyword.py
local-dev-environment/testing/search_evaluation/: chunks_loader.py  date_formats.py  evaluation_config.py  evaluation_settings.py  generate_expected_chunks.py  opensearch_client.py  optimize_search.py  relevance_scoring.py  run_evaluation.py  search_client.py  search_looper.py  term_matching.py
local-dev-environment/testing/testing_docs/: search_terms.csv
local-dev-environment/testing/tests/: test_chunk_metrics.py  test_term_matching.py
local-dev-environment/testing/textract_accuracy/iam_testing/: README.md  __init__.py  config.py  ground_truth_parser.py  iam_filters.py  paths.py  scoring.py  summary_stats.py  textract_client.py  textract_ocr.py
local-dev-environment/testing/textract_accuracy/iam_testing/llm/: __init__.py  base.py  clients.py  diff.py  prompt.py
local-dev-environment/testing/textract_accuracy/iam_testing/runners/: __init__.py  augment.py  batch.py  custom.py  single.py
src/: chunk_uuid_generator.py  config.py  main.py  sketching.py  textract_response_processor.py
temp_overlap/: chunk_1  chunk_2  chunk_3  chunk_4  logs  source_snippet.html  temp  textract_response
tests/: test_config.py  test_extract_text.py  test_paths.py  test_pipeline_builder.py  test_runner.py  test_textract_processor.py
(+277 files in other folders)
