[project]
name = "cica-document-search-airflow"
version = "0.1.0"
description = ""
authors = [{ name = "Marco Surace" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "opensearch-py>=3.1.0,<4.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "amazon-textract-textractor>=1.9.2,<2.0.0",
    "boto3>=1.42.28,<2.0.0",
    "amazon-textract-caller>=0.2.4,<0.3.0",
    "pdf2image>=1.17.0",
]

[dependency-groups]
test = [
    "pytest-mock>=3.15.1,<4",
    "pytest>=8.4.1,<10",
    "pytest-cov>=6.2.1,<8",
    "moto>=5.1.10,<6",
    "jiwer>=4.0.0,<5",
]
dev = ["deptry>=0.23.1,<0.25", "numpy>=2.3.4", "pre-commit>=4.2.0,<5"]

[tool.uv]
default-groups = ["test", "dev"]
# Override sub-dependencies to patch security vulnerabilities
# Update with `uv lock --upgrade` after modifying
constraint-dependencies = [
    "pillow>=12.1.1",      # CVE fix - remove when amazon-textract-textractor updates
    "protobuf>=6.33.5",    # CVE fix - remove when opensearch-protobufs updates  
]

[tool.hatch.build.targets.sdist]
include = ["src/ingestion_pipeline"]

[tool.hatch.build.targets.wheel]
include = ["src/ingestion_pipeline"]

[tool.hatch.build.targets.wheel.sources]
"src/ingestion_pipeline" = "ingestion_pipeline"

[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"
