[project]
name = "cica-document-search-airflow"
version = "0.1.0"
description = ""
authors = [{ name = "Marco Surace" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "opensearch-py>=3.1.0,<4.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "amazon-textract-textractor>=1.9.2,<2.0.0",
    "boto3>=1.42.28,<2.0.0",
    "amazon-textract-caller>=0.2.4,<0.3.0",
    "pdf2image>=1.17.0",
]

[dependency-groups]
test = [
    "pytest-mock>=3.15.1,<4",
    "pytest>=8.4.1,<10",
    "pytest-cov>=6.2.1,<8",
    "moto>=5.1.10,<6",
]
dev = ["deptry>=0.23.1,<0.25", "pre-commit>=4.2.0,<5"]
# Evaluation suite dependencies - separate from [project.dependencies] to avoid
# being bundled into the production Docker image.
evaluation = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "snowballstemmer>=2.2.0",
    "rapidfuzz>=3.0.0",
    "dateparser>=1.1.0",
    "optuna>=4.0.0",
    "xlsxwriter>=3.2.0",
]

[tool.uv]
default-groups = ["test", "dev", "evaluation"]

[tool.hatch.build.targets.sdist]
include = ["src/ingestion_pipeline"]

[tool.hatch.build.targets.wheel]
include = ["src/ingestion_pipeline"]

[tool.hatch.build.targets.wheel.sources]
"src/ingestion_pipeline" = "ingestion_pipeline"

[tool.deptry]
# ingestion_pipeline (inside src/) and evaluation_suite are local first-party modules.
# Without this, deptry incorrectly flags them as missing third-party packages (DEP003).
known_first_party = ["ingestion_pipeline", "evaluation_suite"]

[tool.deptry.per_rule_ignores]
# These packages are in the 'evaluation' dependency group (non-production code)
DEP002 = ["numpy", "pandas", "dateparser"]
# pytest and evaluation packages are correctly dev/test dependencies
DEP004 = ["pytest", "pandas", "optuna", "snowballstemmer", "rapidfuzz", "xlsxwriter"]

[tool.deptry.package_module_name_map]
snowballstemmer = "snowballstemmer"
rapidfuzz = "rapidfuzz"
dateparser = "dateparser"
optuna = "optuna"
pytest-mock = "pytest_mock"
pytest-cov = "pytest_cov"
moto = "moto"

[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"
