[project]
name = "local-dev-environment"
version = "0.1.0"
description = "Local development tools for testing OpenSearch and embeddings"
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "opensearch-py>=3.0.0,<4.0.0",
    "xlsxwriter>=3.2.0",
    "boto3>=1.40.0,<2.0.0",
    "numpy>=2.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["testing", "integration_helper"]
